# wxo-demos

./: .adk.sample  .gitignore  README.md  pyproject.toml
agents/: content_extractor_agent.yaml  elasticsearch_agent.yaml  ip_reputation_agent.yaml  jokes_agent.yaml  patent_drafter_agent.yaml  patent_ideation_agent.yaml  patent_supervisor_agent.yaml  patent_topic_research_agent.yaml  procurement_agent.yaml  topic_research_agent.yaml  ui_automation_tester_agent.yaml  weather_info_agent.yaml  web_scraping_agent.yaml  youtube_transcriber_agent.yaml  youtube_video_info_agent.yaml
demos/: demo_1_clean.sh  demo_1_deploy.sh  demo_2_clean.sh  demo_2_deploy.sh  demo_3_clean.sh  demo_3_deploy.sh  demo_4_clean.sh  demo_4_deploy.sh  demo_5_clean.sh  demo_5_deploy.sh  demo_6_clean.sh  demo_6_deploy.sh  demo_7_clean.sh  demo_7_deploy.sh  demo_8_clean.sh  demo_8_deploy.sh  demo_9_clean.sh  demo_9_deploy.sh
knowledge_base/: bom.yaml
models/: ollama.yaml  rits.yaml
tools/docling/: content_extractor_by_url.py
tools/virustotal/: check_ip_reputation.py
tools/weather/: openmeteo.py
tools/youtube/: youtube_info.py  youtube_transcriber.py
