[project]
name = "wxo-demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "ibm-watsonx-orchestrate==1.5.0b0",
    "requests>=2.32.3",
    "youtube-transcript-api>=1.0.3",
    "yt-dlp>=2025.5.22",
]
